develop/grep - basic grep works

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,11 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug that shit",
-            "program": "${workspaceFolder}/src/cat/s21_cat.out",
+            "program": "${workspaceFolder}/src/grep/s21_grep.out",
+            // "program": "${workspaceFolder}/src/cat/s21_cat.out",
             // "args": ["-b", "${workspaceFolder}/src/cat/s21_cat.c"],
-            "args": ["-e", "${workspaceFolder}/src/cat/test1.txt"],
+            // "args": ["-e", "${workspaceFolder}/src/cat/test1.txt"],
+            "args": ["-e", "main", "-e", "define", "${workspaceFolder}/src/grep/s21_grep.c"],
             "cwd": "${workspaceFolder}"
         }
     ]
