develop/grep sanitizer has found issues

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,10 @@
 CC=gcc
-CFLAGS=-Wall -Werror -Wextra -std=c11 -pedantic -c -g
-
+CFLAGS=-Wall -Werror -Wextra -std=c11 -pedantic -c -g -fsanitize=address
+LFLAGS=-fsanitize=address
 
 BUILDDIRCAT=cat
 BUILDDIRGREP=grep
+REPORT_DIRECTORY=valgrind_report
 
 
 all: s21_cat s21_grep
@@ -12,7 +13,6 @@ all: s21_cat s21_grep
 s21_cat: $(BUILDDIRCAT)/s21_cat
 
 s21_grep: $(BUILDDIRGREP)/s21_grep
-
 
 
 s21_cat_test: s21_cat
@@ -27,15 +27,14 @@ s21_grep_test_extended: s21_grep
 
 
 $(BUILDDIRCAT)/s21_cat: $(BUILDDIRCAT)/s21_cat.o
-		$(CC) $< -o $@
+		$(CC) $(LFLAGS) $< -o $@ 
 
 $(BUILDDIRCAT)/s21_cat.o: $(BUILDDIRCAT)/s21_cat.c
 		$(CC) $(CFLAGS) $< -o $@
 
 
-	
 $(BUILDDIRGREP)/s21_grep: $(BUILDDIRGREP)/s21_grep.o
-		$(CC) $< -o $@
+		$(CC) $(LFLAGS) $< -o $@
 
 $(BUILDDIRGREP)/s21_grep.o: $(BUILDDIRGREP)/s21_grep.c
 		$(CC) $(CFLAGS) $< -o $@
@@ -49,3 +48,12 @@ clean_s21_grep:
 
 
 clean: clean_s21_cat clean_s21_grep
+
+
+leaks: s21_grep s21_cat
+		leaks -atExit -- $(BUILDDIRCAT)/s21_cat -n -s $(BUILDDIRCAT)/s21_cat.c
+		leaks -atExit -- $(BUILDDIRGREP)/s21_grep -emain -nieReTuRn $(BUILDDIRGREP)/s21_grep.c $(BUILDDIRGREP)/s21_grep.c
+
+valgrind:
+		mkdir -p $(REPORT_DIRECTORY)
+		valgrind --trace-children=yes --leak-check=full --show-leak-kinds=all --track-origins=yes $(BUILDDIRCAT)/s21_cat > $(REPORT_DIRECTORY)/valgrind_report.txt
