develop/Makefile - -g for valgrind

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-Wall -Werror -Wextra -std=c11 -pedantic -c -fsanitize=address
 LFLAGS=-fsanitize=address
-DEBUGFLAGS=#-g
+DEBUGFLAGS=-g
 
 BUILDDIRCAT=cat
 BUILDDIRGREP=grep
