--- a/Dockerfile_ubuntu
+++ b/Dockerfile_ubuntu
@@ -1,21 +1,20 @@
-FROM alpine
+FROM ubuntu
 
-RUN apk upgrade && apk add \
+RUN apt-get update && apt-get install -y \
     valgrind \
     git \
     make \
     gcc \
-    musl-dev \
-    bash \
     && rm -rf /var/lib/apt/lists
 
 COPY . project/
 
 WORKDIR /project/src/
 
-RUN addgroup -S appgroup && \
-    adduser -S appuser -G appgroup && \
+RUN groupadd -g 999 appuser && \
+    useradd -r -u 999 -g appuser appuser && \
     chmod +x _run_make_valgrind_for_dockerfile.sh
 
 USER appuser
+
 ENTRYPOINT [ "/project/src/_run_make_valgrind_for_dockerfile.sh" ]
